remove jupyter checkpoints and add to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 .ipynb_checkpoints/Lab_ConnGraphTheory_Foundations3-checkpoint.ipynb
+.ipynb_checkpoints/HW_ConnGraphTheory_Foundations3-checkpoint.ipynb
